--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="author" name="VISHNU KS">
+    <meta name="description" content="Library Web-Page">
     <title>Library Shelf</title>
+    <link rel="icon" href="img/book-icn.jpg" type="image">
         <!-- css linkage -->
 <link rel="stylesheet" href="css/styles.css">
 
